# jenkins-cmake-ctest

./: CMakeLists.txt  Jenkinsfile  hello.c  hello.h  instruction.txt  main.c
test/: CMakeLists.txt  test.c
